<resources>
    <string name="app_name">Чистый Арзамас</string>
    <string name="action_settings">Настройки</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="save">Сохранить как</string>
    <string name="export">Поделиться как</string>
    <string name="json">JSON</string>
    <string name="sql">SQL</string>
</resources>