<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.aaa.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save"
        android:title="@string/save">
        <menu>
            <item
                android:id="@+id/action_save_json"
                android:title="@string/json"
                />
            <item
                android:id="@+id/action_save_db"
                android:title="@string/sql"
                />
        </menu>
    </item>

    <item
        android:id="@+id/action_export"
        android:title="@string/export">
        <menu>
            <item
                android:id="@+id/action_export_json"
                android:title="@string/json"
                />
            <item
                android:id="@+id/action_export_db"
                android:title="@string/sql"
                />
        </menu>

    </item>
</menu>